--- a/blog/templates/base.html.twig
+++ b/blog/templates/base.html.twig
@@ -1,19 +1,179 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>
+			{% block title %}Inicio
+			{% endblock %}
+		</title>
+		<link
+		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		<!-- Bootstrap -->
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/animate.css">
+		<link rel="stylesheet" href="css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/jquery.bxslider.css">
+		<link rel="stylesheet" type="text/css" href="css/normalize.css"/>
+		<link rel="stylesheet" type="text/css" href="css/demo.css"/>
+		<link rel="stylesheet" type="text/css" href="css/set1.css"/>
+		<link href="css/overwrite.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
+	</head>
+	<body>
+		{# Header #}
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<div
+				class="container">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse.collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="index.html">
+						<span>ProOnliPc</span>
+					</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<div class="menu">
+						<ul class="nav nav-tabs" role="tablist">
+							<li role="presentation" class="active">
+								<a href="{{ path('index') }}">Home</a>
+							</li>
+							<li role="presentation">
+								<a href="{{ path('services') }}">Services</a>
+							</li>
+							<li role="presentation">
+								<a href="{{ path('single_post') }}">Blog</a>
+							</li>
+							<li role="presentation">
+								<a href="portfolio.html">Portfolio</a>
+							</li>
+							<li role="presentation">
+								<a href="{{ path('contact') }}">Contact</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</nav>
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+		{% block body %}{% endblock %}
+
+		{# footer #}
+		<footer>
+			<div class="inner-footer">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-4 f-about">
+							<a href="index.html">
+								<h1>
+									<span>e</span>Nno</h1>
+							</a>
+							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit Cras suscipit arcu libero vestibulum volutpat libero sollicitudin vitae Curabitur ac aliquam consectetur adipiscing elit Cras suscipit arcu libero
+							</p>
+						</div>
+						<div class="col-md-4 l-posts">
+							<h3 class="widgetheading">Latest Posts</h3>
+							<ul>
+								<li><a href="#">This is awesome post title</a></li>
+								<li><a href="#">Awesome features are awesome</a></li>
+								<li><a href="#">Create your own awesome website</a></li>
+								<li><a href="#">Wow, this is fourth post title</a></li>
+							</ul>
+						</div>
+						<div class="col-md-4 f-contact">
+							<h3 class="widgetheading">Stay in touch</h3>
+							<a href="#">
+								<p>
+									<i class="fa fa-envelope"></i>
+									example@gmail.com</p>
+							</a>
+							<p>
+								<i class="fa fa-phone"></i>
+								+345 578 59 45 416</p>
+							<p>
+								<i class="fa fa-home"></i>
+								ProOnliPc inc | PO Box 23456 Little Lonsdale St, New York
+								<br>
+								Victoria 8011 USA</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			{# footer del tot #}
+			<div class="last-div">
+				<div class="container">
+					<div class="row">
+						<div class="copyright">
+							&copy; ProOnliPc Theme. All Rights Reserved
+							<div class="credits">
+
+								<a href="https://www.youtube.com/channel/UCDH0DJaVLkCDtl_YN9hhByw?view_as=subscriber">ProOnliPc Themes</a>
+								by
+								<a href="https://www.youtube.com/channel/UCDH0DJaVLkCDtl_YN9hhByw?view_as=subscriber">ProOnliPc</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<ul class="social-network">
+							<li>
+								<a href="#" data-placement="top" title="Facebook">
+									<i class="fa fa-facebook fa-1x"></i>
+								</a>
+							</li>
+							<li>
+								<a href="#" data-placement="top" title="Twitter">
+									<i class="fa fa-twitter fa-1x"></i>
+								</a>
+							</li>
+							<li>
+								<a href="#" data-placement="top" title="Linkedin">
+									<i class="fa fa-linkedin fa-1x"></i>
+								</a>
+							</li>
+							<li>
+								<a href="#" data-placement="top" title="Pinterest">
+									<i class="fa fa-pinterest fa-1x"></i>
+								</a>
+							</li>
+							<li>
+								<a href="#" data-placement="top" title="Google plus">
+									<i class="fa fa-google-plus fa-1x"></i>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+
+				<a href="" class="scrollup">
+					<i class="fa fa-chevron-up"></i>
+				</a>
+
+
+			</div>
+		</footer>
+
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="js/jquery-2.1.1.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/wow.min.js"></script>
+		<script src="js/jquery.easing.1.3.js"></script>
+		<script src="js/jquery.isotope.min.js"></script>
+		<script src="js/jquery.bxslider.min.js"></script>
+		<script type="text/javascript" src="js/fliplightbox.min.js"></script>
+		<script src="js/functions.js"></script>
+		<script type="text/javascript">
+			$('.portfolio').flipLightBox()
+		</script>
+
+	</body>
 </html>
