creat formulari post

--- a/blog/templates/page/contact.html.twig
+++ b/blog/templates/page/contact.html.twig
@@ -1,5 +1,10 @@
 {% extends "base.html.twig" %}
 {% block title %}Contact{% endblock %}
+{% block indexClass %}{% endblock %}
+{% block servicesClass %}{% endblock %}
+{% block blogClass %}{% endblock %}
+{% block portfolioClass %}{% endblock %}
+{% block contactClass %}class="active"{% endblock %}
 {% block body %}
 <div class="map">
     <div id="google-map" data-latitude="40.713732" data-longitude="-74.0092704"></div>
