--- a/blog/templates/page/index.html.twig
+++ b/blog/templates/page/index.html.twig
@@ -1,5 +1,10 @@
 {% extends "base.html.twig" %}
 {% block title %}Index{% endblock %}
+{% block indexClass %}class="active"{% endblock %}
+{% block servicesClass %}{% endblock %}
+{% block blogClass %}{% endblock %}
+{% block portfolioClass %}{% endblock %}
+{% block contactClass %}{% endblock %}
 {% block body %}
     {# Carrusel #}
 		<div class="container">
