--- a/blog/templates/base.html.twig
+++ b/blog/templates/base.html.twig
@@ -11,15 +11,15 @@
 		<link
 		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 		<!-- Bootstrap -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/animate.css">
-		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/jquery.bxslider.css">
-		<link rel="stylesheet" type="text/css" href="css/normalize.css"/>
-		<link rel="stylesheet" type="text/css" href="css/demo.css"/>
-		<link rel="stylesheet" type="text/css" href="css/set1.css"/>
-		<link href="css/overwrite.css" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet">
+		<link href="/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="{{ asset('css/animate.css') }}">
+		<link rel="stylesheet" href="{{ asset('css/font-awesome.min.css') }}">
+		<link rel="stylesheet" href="{{ asset('css/jquery.bxslider.css') }}">
+		<link rel="stylesheet" type="text/css" href="{{ asset('css/normalize.css') }}"/>
+		<link rel="stylesheet" type="text/css" href="{{ asset('css/demo.css') }}"/>
+		<link rel="stylesheet" type="text/css" href="{{ asset('css/set1.css') }}"/>
+		<link href="{{ asset('css/overwrite.css') }}" rel="stylesheet">
+		<link href="{{ asset('css/style.css') }}" rel="stylesheet">
 	</head>
 	<body>
 		{# Header #}
@@ -41,19 +41,19 @@
 				<div class="navbar-collapse collapse">
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation" class="active">
+							<li role="presentation" {% block indexClass %}{% endblock %}>
 								<a href="{{ path('index') }}">Home</a>
 							</li>
-							<li role="presentation">
+							<li role="presentation" {% block servicesClass %}{% endblock %}>
 								<a href="{{ path('services') }}">Services</a>
 							</li>
-							<li role="presentation">
-								<a href="{{ path('single_post') }}">Blog</a>
+							<li role="presentation" {% block blogClass %}{% endblock %}>
+								<a href="{{ path('blog') }}">Blog</a>
 							</li>
-							<li role="presentation">
+							<li role="presentation" {% block portfolioClass %}{% endblock %}>
 								<a href="portfolio.html">Portfolio</a>
 							</li>
-							<li role="presentation">
+							<li role="presentation" {% block contactClass %}{% endblock %}>
 								<a href="{{ path('contact') }}">Contact</a>
 							</li>
 						</ul>
