--- a/blog/templates/blog/index.html.twig
+++ b/blog/templates/blog/index.html.twig
@@ -2,19 +2,31 @@
 
 {% block title %}Hello BlogController!{% endblock %}
 
+{% block indexClass %}{% endblock %}
+{% block servicesClass %}{% endblock %}
+{% block blogClass %}class="active"{% endblock %}
+{% block portfolioClass %}{% endblock %}
+{% block contactClass %}{% endblock %}
+
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<div class="blogs">
+					<div class="text-center">
+						<h2>Blog</h2>
+						<p>Lorem ipsum dolor sit amet consectetur adipiscing elit Cras suscipit arcu<br>
+							vestibulum volutpat libero sollicitudin vitae Curabitur ac aliquam
+							<br>
+						</p>
+					</div>
+					<hr>
+				</div>
+			</div>
+		</div>
+	</div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    {% include "blog/single_post.html.twig" %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/alumno/Documentos/ejercicio_blog/blog/src/Controller/BlogController.php'|file_link(0) }}">src/Controller/BlogController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/alumno/Documentos/ejercicio_blog/blog/templates/blog/index.html.twig'|file_link(0) }}">templates/blog/index.html.twig</a></code></li>
-    </ul>
-</div>
+
 {% endblock %}
