--- a/blog/templates/blog/single_post.html.twig
+++ b/blog/templates/blog/single_post.html.twig
@@ -1,22 +1,3 @@
-{% extends "base.html.twig" %}
-{% block title %}Blog{% endblock %}
-{% block body %}
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<div class="blogs">
-					<div class="text-center">
-						<h2>Blog</h2>
-						<p>Lorem ipsum dolor sit amet consectetur adipiscing elit Cras suscipit arcu<br>
-							vestibulum volutpat libero sollicitudin vitae Curabitur ac aliquam
-							<br>
-						</p>
-					</div>
-					<hr>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<div class="container">
 		<div class="row">
@@ -157,9 +138,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8">
-				<div class="embed-responsive embed-responsive-4by3">
+				{# <div class="embed-responsive embed-responsive-4by3">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/HrdAkX0ue3k?list=PLB523918A978EF359" frameborder="1" allowfullscreen></iframe>
-				</div>
+				</div> #}
 			</div>
 			<div class="col-md-4">
 				<div class="popular-tags">
@@ -188,4 +169,3 @@
 			</div>
 		</div>
 	</div>
-{% endblock %}
