--- a/blog/templates/page/services.html.twig
+++ b/blog/templates/page/services.html.twig
@@ -1,6 +1,11 @@
 {% extends "base.html.twig" %}
 {% block title %}Services
 {% endblock %}
+{% block indexClass %}{% endblock %}
+{% block servicesClass %}class="active"{% endblock %}
+{% block blogClass %}{% endblock %}
+{% block portfolioClass %}{% endblock %}
+{% block contactClass %}{% endblock %}
 {% block body %}
 	<div class="container">
 		<div class="row">
