Mateix commit d abans

--- a/blog/templates/blog/index.html.twig
+++ b/blog/templates/blog/index.html.twig
@@ -26,7 +26,8 @@
 		</div>
 	</div>
 
-    {% include "blog/single_post.html.twig" %}
+{# M'he quedat ací #}
+    {% include "blog/single_post.html.twig" with {''} %}
 
 
 {% endblock %}
