Per fer: -> likes -> missatges -> errors paginació

--- a/blog/templates/blog/index.html.twig
+++ b/blog/templates/blog/index.html.twig
@@ -27,7 +27,7 @@
 	</div>
 
 {# M'he quedat ací #}
-    {% include "blog/single_post.html.twig" with {''} %}
+    {% include "blog/single_post.html.twig" %}
 
 
 {% endblock %}
