--- a/blog/templates/blog/single_post.html.twig
+++ b/blog/templates/blog/single_post.html.twig
@@ -4,21 +4,15 @@
 			<div class="col-md-8">
 				<div class="page-header">
 					<div class="blog">
-						<h5>February,22 2015</h5>
-						<img src="img/01.jpg" class="img-responsive" alt=""/>
+						<h5>{{ post.autor }} // <i>{{ fecha }}</h5>
+						<img src="{{ asset('img/' ~ post.imagen) }}" class="img-responsive" alt=""/>
 
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-							              aliquip ex ea commodo consequat.</p>
+						<p>{{ post.resumen }}</p>
 
-						<h3>Lorem ipsum dolor sit amet</h3>
+						<h3>{{ post.titulo }}</h3>
 
-						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore
-							              te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.</p>
+						<p>{{ post.cuerpo }}</p>
 
-						<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum.</p>
-
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-							              aliquip ex ea commodo consequat.</p>
 						<div class="ficon">
 							<a href="#" alt="">Learn more</a>
 						</div>
@@ -29,28 +23,20 @@
 						<nav>
 							<ul class="pagination">
 								<li>
-									<a href="#">
+									<a href="{{ path('blog', {numBlog : nBlog + 1}) }}">
 										<span aria-hidden="true">&laquo;</span>
 										<span class="sr-only">Previous</span>
 									</a>
 								</li>
+								{% set ind = 1 %}
+								{% for nPost in posts %}
+									<li>
+										<a href="{{ path('blog', {numBlog : posts|length - ind}) }}">{{ ind }}</a>
+									</li>
+									{% set ind = ind + 1 %}
+								{% endfor %}
 								<li>
-									<a href="#">1</a>
-								</li>
-								<li>
-									<a href="#">2</a>
-								</li>
-								<li>
-									<a href="#">3</a>
-								</li>
-								<li>
-									<a href="#">4</a>
-								</li>
-								<li>
-									<a href="#">5</a>
-								</li>
-								<li>
-									<a href="#">
+									<a href="{{ path('blog', {numBlog : nBlog - 1}) }}">
 										<span aria-hidden="true">&raquo;</span>
 										<span class="sr-only">Next</span>
 									</a>
@@ -70,66 +56,24 @@
 					<div class="panel-heading">
 						<strong>Popular Posts</strong>
 					</div>
-					<div class="panel-body">
+					{% set ind = 0 %}
+					{% for miniPost in posts %}
+						<div class="panel-body">
 						<div class="media">
 							<a class="media-left" href="#">
 								<img src="img/b.jpg" alt="">
 							</a>
 							<div class="media-body">
-								<h4 class="media-heading">Kelly Hidayah</h4>
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-								</p>
+								<h4 class="media-heading">{{ miniPost.autor }}</h4>
+								<p>{{ miniPost.resumen }}</p>
 								<div class="ficon">
-									<a href="#" alt="">Read more</a>
+									<a href="{{ path('blog', {numBlog : ind}) }}" alt="">Read more</a>
+									{% set ind = ind + 1 %}
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="panel-body">
-						<div class="media">
-							<a class="media-left" href="#">
-								<img src="img/a.jpg" alt="">
-							</a>
-							<div class="media-body">
-								<h4 class="media-heading">Kelly Hidayah</h4>
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-								</p>
-								<div class="ficon">
-									<a href="#" alt="">Read more</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="panel-body">
-						<div class="media">
-							<a class="media-left" href="#">
-								<img src="img/c.jpg" alt="">
-							</a>
-							<div class="media-body">
-								<h4 class="media-heading">Kelly Hidayah</h4>
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-								</p>
-								<div class="ficon">
-									<a href="#" alt="">Read more</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="panel-body">
-						<div class="media">
-							<a class="media-left" href="#">
-								<img src="img/d.jpg" alt="">
-							</a>
-							<div class="media-body">
-								<h4 class="media-heading">Kelly Hidayah</h4>
-								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-								</p>
-								<div class="ficon">
-									<a href="#" alt="">Read more</a>
-								</div>
-							</div>
-						</div>
-					</div>
+					{% endfor %}
 				</div>
 			</div>
 		</div>
