--- a/blog/templates/base.html.twig
+++ b/blog/templates/base.html.twig
@@ -20,6 +20,8 @@
 		<link rel="stylesheet" type="text/css" href="{{ asset('css/set1.css') }}"/>
 		<link href="{{ asset('css/overwrite.css') }}" rel="stylesheet">
 		<link href="{{ asset('css/style.css') }}" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="{{ asset('css/propio.css') }}"/>
+
 	</head>
 	<body>
 		{# Header #}
